Calico/src/a.yaml
apiVersion: v1
kind: Pod
metadata:
  name: a
  labels:
    app: a
spec:
  containers:
    - name: a-cnt
      image: nginx:latest
