Calico/src/c.yaml
apiVersion: v1
kind: Pod
metadata:
  name: c
  labels:
    app: c
spec:
  containers:
    - name: c-cnt
      image: nginx:latest
